--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>XAUMAN | Coming Soon</title>
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
-</head>
+    <link
+      rel="stylesheet"
+      href="node_modules/bootstrap/dist/css/bootstrap.css"
+    />
+  </head>
 
-<body>
+  <body>
     <div class="container">
+      <div
+        class="p-3 text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-3"
+      >
+        Example element with utilities
+      </div>
     </div>
+    <div></div>
+    <div></div>
+    <div></div>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
-</body>
-
+  </body>
 </html>
