--- a/index.html
+++ b/index.html
@@ -1,26 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>XAUMAN | Coming Soon</title>
-    <link
-      rel="stylesheet"
-      href="node_modules/bootstrap/dist/css/bootstrap.css"
-    />
-  </head>
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css" />
+</head>
 
-  <body>
-    <div class="container">
-      <div
-        class="p-3 text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-3"
-      >
-        Example element with utilities
-      </div>
+<body>
+    <h1 class="text-center">Grid Example</h1>
+    <div class="container-fluid text-center">
+        <div class="row">
+            <h2>Example 1</h2>
+            <div class="col bg-primary text-center">Main Content</div>
+            <div class="col bg-secondary text-center">Side Bar</div>
+        </div>
+        <div class="row">
+            <h2>Example 2</h2>
+            <div class="col">
+                <div class="row bg-primary text-center">Header</div>
+                <div class="row bg-secondary text-center">Article</div>
+                <div class="row bg-warning text-center">Footer</div>
+            </div>
+            <div class="col bg-danger text-center">Side Bar</div>
+        </div>
+        <div class="row">
+            <h2>Example 3</h2>
+            <div class="col-xxl-1 col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12 bg-primary text-center">col-xxl-1
+                col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12</div>
+            <div class="col-xxl-1 col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12 bg-primary text-center">col-xxl-1
+                col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12</div>
+            <div class="col-xxl-1 col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12 bg-primary text-center">col-xxl-1
+                col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12</div>
+            <div class="col-xxl-1 col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12 bg-primary text-center">col-xxl-1
+                col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12</div>
+            <div class="col-xxl-1 col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12 bg-primary text-center">col-xxl-1
+                col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12</div>
+            <div class="col-xxl-1 col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12 bg-primary text-center">col-xxl-1
+                col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12</div>
+            <div class="col-xxl-1 col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12 bg-primary text-center">col-xxl-1
+                col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12</div>
+            <div class="col-xxl-1 col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12 bg-primary text-center">col-xxl-1
+                col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12</div>
+            <div class="col-xxl-1 col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12 bg-primary text-center">col-xxl-1
+                col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12</div>
+            <div class="col-xxl-1 col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12 bg-primary text-center">col-xxl-1
+                col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12</div>
+            <div class="col-xxl-1 col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12 bg-primary text-center">col-xxl-1
+                col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12</div>
+            <div class="col-xxl-1 col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12 bg-primary text-center">col-xxl-1
+                col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12</div>
+        </div>
     </div>
-    <div></div>
-    <div></div>
-    <div></div>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
-  </body>
+</body>
+
 </html>
