--- a/index.html
+++ b/index.html
@@ -6,53 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>XAUMAN | Coming Soon</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css" />
+    <style>
+        [class*="col"] {
+            padding: 1rem;
+            background-color: #33b5e5;
+            border: 2px solid #fff;
+            color: #fff;
+        }
+    </style>
 </head>
 
 <body>
-    <h1 class="text-center">Grid Example</h1>
     <div class="container-fluid text-center">
         <div class="row">
-            <h2>Example 1</h2>
-            <div class="col bg-primary text-center">Main Content</div>
-            <div class="col bg-secondary text-center">Side Bar</div>
-        </div>
-        <div class="row">
-            <h2>Example 2</h2>
-            <div class="col">
-                <div class="row bg-primary text-center">Header</div>
-                <div class="row bg-secondary text-center">Article</div>
-                <div class="row bg-warning text-center">Footer</div>
+            <div class="col-lg-2"><button class="btn btn-primary my-2">Click me</button>
+                <button class="btn btn-danger my-2">Click me</button>
+                <button class="btn btn-warning my-2">Click me</button>
+                <button class="btn btn-secondary my-2">Click me</button>
             </div>
-            <div class="col bg-danger text-center">Side Bar</div>
+            <div class="col"><button class="btn btn-primary">Click me</button></div>
         </div>
         <div class="row">
-            <h2>Example 3</h2>
-            <div class="col-xxl-1 col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12 bg-primary text-center">col-xxl-1
-                col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12</div>
-            <div class="col-xxl-1 col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12 bg-primary text-center">col-xxl-1
-                col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12</div>
-            <div class="col-xxl-1 col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12 bg-primary text-center">col-xxl-1
-                col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12</div>
-            <div class="col-xxl-1 col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12 bg-primary text-center">col-xxl-1
-                col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12</div>
-            <div class="col-xxl-1 col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12 bg-primary text-center">col-xxl-1
-                col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12</div>
-            <div class="col-xxl-1 col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12 bg-primary text-center">col-xxl-1
-                col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12</div>
-            <div class="col-xxl-1 col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12 bg-primary text-center">col-xxl-1
-                col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12</div>
-            <div class="col-xxl-1 col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12 bg-primary text-center">col-xxl-1
-                col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12</div>
-            <div class="col-xxl-1 col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12 bg-primary text-center">col-xxl-1
-                col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12</div>
-            <div class="col-xxl-1 col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12 bg-primary text-center">col-xxl-1
-                col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12</div>
-            <div class="col-xxl-1 col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12 bg-primary text-center">col-xxl-1
-                col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12</div>
-            <div class="col-xxl-1 col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12 bg-primary text-center">col-xxl-1
-                col-xl-2 col-lg-3-col-md-4 col-sm-6 col-xs-12</div>
+            <div class="col">
+
+            </div>
+            <div class="col"></div>
         </div>
     </div>
+
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
 
