--- a/index.html
+++ b/index.html
@@ -28,9 +28,36 @@
         </div>
         <div class="row">
             <div class="col">
-
+                <div class="card text-black text-start" style="width: 25rem;">
+                    <div class="card-header text-center">We are looking for you</div>
+                    <img src=".src/img/Trading.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                    <div class="card-footer text-center text-muted">This is the final look</div>
+                </div>
             </div>
-            <div class="col"></div>
+            <div class="col">
+                <div class="card mb-3" style="max-width: 540px;">
+                    <div class="row g-0">
+                        <div class="col-md-4 bg-black text-black">
+                            <img src=".src/img/Trading.jpg" class="img-fluid" alt="...">
+                        </div>
+                        <div class="col-md-8 bg-white text-black">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural
+                                    lead-in to additional content. This content is a little bit longer.</p>
+                                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
