Bootstrap font style updated

--- a/index.html
+++ b/index.html
@@ -2,17 +2,78 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>XAUMAN | Coming Soon</title>
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css" />
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>XAUMAN | Coming Soon</title>
+  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
+  <link rel="stylesheet" href="assets/css/style.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Alkatra:wght@400;500;600&family=Playfair+Display:ital@0;1&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
+  <header></header>
+  <main>
     <div class="container-fluid text-center">
-
+      <div class="row justify-content-center align-items-center">
+        <div class="col bg-primary "
+          style="background:url(.src/img/Trading.jpg) no-repeat center center fixed;-webkit-background-size:cover;-moz-background-size:cover;background-size:cover;-o-background-size:cover;height:85vh">
+          <div class="text-white text-center my-5">
+            <h1 class="display-1 my-5">Xauman Forex</h1>
+            <p class="display-4 ">Coming Soon</p>
+          </div>
+        </div>
+      </div>
+      <div class="row bg-black text-white justify-content-center align-items-center" style="height:45vh">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="my-3">
+              <p class="social-title">Follow us on social media for updates</p>
+            </div>
+            <ul class="social-list">
+              <li><a target="_blank" rel="noopener noreferrer" class="social-list-facebook"
+                  href="https://www.facebook.com/sharer/sharer.php?u=https://hessal-sol.com/"
+                  aria-label="facebook share button"><i class="fa fa-facebook"></i></a></li>
+              <li><a target="_blank" rel="noopener noreferrer" class="social-list-whatsapp"
+                  href="whatsapp://send?text=We%20are%20Hessal%20Solutions,%20LPG%20Specialists%20and%20Installers%20Get%20to%20know%20more%20about%20us.%20Visit%20our%20site%20@%20.%20https://hessal-sol.com/"
+                  aria-label="whatsapp share button"><i class="fa fa-whatsapp"></i></a></li>
+              <li><a target="_blank" rel="noopener noreferrer" class="social-list-twitter"
+                  href="https://twitter.com/intent/tweet?text=We%20are%20Hessal%20Solutions,%20LPG%20Specialists%20and%20Installers%20Get%20to%20know%20more%20about%20us.%20Visit%20our%20site%20@%20.%20https://hessal-sol.com/"
+                  aria-label="twitter share button"><i class="fa fa-twitter"></i></a></li>
+              <li><a target="_blank" rel="noopener noreferrer" class="social-list-linkedin"
+                  href="https://www.linkedin.com/sharing/share-offsite/?url=https://hessal-sol.com/"
+                  aria-label="linkedin share button"><i class="fa fa-linkedin"></i></a></li>
+            </ul>
+            <div class="display-3 my-4">Subscribe</div>
+            <div class="text-muted my-2">Sign up to be the first to know about our soft launch events</div>
+          </div>
+        </div>
+      </div>
+      <div class="row row-cols-lg-auto align-items-start justify-content-center bg-black" style="height:20vh">
+        <div class="col-12 my-2"><input type="email" class="form-control" id="exampleInputEmail1"
+            aria-describedby="emailHelp" style="background-color:#000" placeholder="E-mail"></div>
+        <div class="col-12 my-2 justify-content-md-start"><button type="button" class="btn btn-primary bg-dark">Sign
+            Up</button></div>
+      </div>
     </div>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+  </main>
+  <footer class="footer mt-auto py-3 bg-black">
+    <div class="container-fluid text-center">
+      <div class="row bg-black text-muted">
+        <div class="col-md-6 mb-2">Copyright Xauman Forex - All Rights Reserved.</div>
+        <div class="col-md-6 mb-2">Designed by <strong class="text-white">Godi Blasio</strong></div>
+      </div>
+      <div class="row bg-black text-muted text-center">
+        <p class="footer-priv mb-2"><a href="#">Privacy Policy</a></p>
+      </div>
+    </div>
+  </footer>
+  <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
 
 </html>
