--- a/index.html
+++ b/index.html
@@ -2,10 +2,60 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1L41JYFVYB"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-1L41JYFVYB');
+  </script>
+
+  <!-- Title -->
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta http-equiv="cache-control" content="max-age=31536000, public">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>XAUMAN | Coming Soon</title>
+  <!--MetaData-->
+  <meta name="description"
+    content="We are a team of LPG specialists with diverse knowledge on the design, installation and maintenance of LPG systems and appliances. Connect with us for more!">
+  <meta name="theme-color" content="#f89a4b">
+  <link rel="canonical" href="https://hessal-sol.com/index.html">
+  <meta property="og:locale" content="en_US">
+  <meta property="og:type" content="Website">
+  <meta property="og:title" content="Hessal Solutions LTD">
+  <meta property="og:description"
+    content="We are a team of LPG specialists with diverse knowledge on the design, installation and maintenance of LPG systems and appliances. Connect with us for more!">
+  <meta property="og:url" content="https://hessal-sol.com/index.html">
+  <meta property="og:site_name" content="Hessal Solutions LTD">
+  <meta property="og:image" content="https://hessal-sol.com/img/bg/Image-7.webp">
+  <meta property="og:image:width" content="1280">
+  <meta property="og:image:height" content="720">
+  <meta name="keywords"
+    content="LPG Design, LPG Installation, LPG Maintenance, LPG Appliances, LPG Safety, LPG Leak Detection, LPG Benefits, LPG Uses, LPG Production, LPG Fires, LPG Tanks, LPG Earthing">
+  <meta name="author" content="Hessal Solutions">
+  <script type="application/ld+json">{
+    "@context": "http://schema.org",
+    "@type": "LocalBusiness",
+    "name": "Hessal Solutions",
+    "image": "https://hessal-sol.com/img/bg/Image-7.webp",
+    "url":"https://hessal-sol.com",
+    "telephone": "+254 (706) 547 003",
+    "email": "info@hessal-sol.com",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Westlands",
+      "addressRegion": "Nairobi",
+      "addressCountry": "Kenya"
+    }
+  }</script>
+  <!-- Favicons -->
+  <link rel="shortcut icon" href="assets/img/Hessal-32.png">
+  <link rel="apple-touch-icon" href="assets/img/Hessal-60.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="assets/img/Hessal-76.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="assets/img/Hessal-120.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="assets/img/Hessal-152.png">
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="assets/css/style.css">
 
@@ -22,7 +72,7 @@
     <div class="container-fluid text-center">
       <div class="row justify-content-center align-items-center">
         <div class="col bg-primary "
-          style="background:url(.src/img/Trading.jpg) no-repeat center center fixed;-webkit-background-size:cover;-moz-background-size:cover;background-size:cover;-o-background-size:cover;height:85vh">
+          style="background:url(src/img/Trading.jpg) no-repeat center center fixed;-webkit-background-size:cover;-moz-background-size:cover;background-size:cover;-o-background-size:cover;height:85vh">
           <div class="text-white text-center my-5">
             <h1 class="display-1 my-5">Xauman Forex</h1>
             <p class="display-4 ">Coming Soon</p>
@@ -37,27 +87,33 @@
             </div>
             <ul class="social-list">
               <li><a target="_blank" rel="noopener noreferrer" class="social-list-facebook"
-                  href="https://www.facebook.com/sharer/sharer.php?u=https://hessal-sol.com/"
-                  aria-label="facebook share button"><i class="fa fa-facebook"></i></a></li>
+                  href="https://www.facebook.com/profile.php?id=100089398025541" aria-label="facebook share button"><i
+                    class="fa fa-facebook"></i></a></li>
               <li><a target="_blank" rel="noopener noreferrer" class="social-list-whatsapp"
                   href="whatsapp://send?text=We%20are%20Hessal%20Solutions,%20LPG%20Specialists%20and%20Installers%20Get%20to%20know%20more%20about%20us.%20Visit%20our%20site%20@%20.%20https://hessal-sol.com/"
-                  aria-label="whatsapp share button"><i class="fa fa-whatsapp"></i></a></li>
+                  aria-label="whatsapp follow button"><i class="fa fa-whatsapp"></i></a></li>
               <li><a target="_blank" rel="noopener noreferrer" class="social-list-twitter"
-                  href="https://twitter.com/intent/tweet?text=We%20are%20Hessal%20Solutions,%20LPG%20Specialists%20and%20Installers%20Get%20to%20know%20more%20about%20us.%20Visit%20our%20site%20@%20.%20https://hessal-sol.com/"
-                  aria-label="twitter share button"><i class="fa fa-twitter"></i></a></li>
-              <li><a target="_blank" rel="noopener noreferrer" class="social-list-linkedin"
+                  href="https://twitter.com/XaumanForex" aria-label="twitter follow button"><i
+                    class="fa fa-twitter"></i></a></li>
+              <li><a target="_blank" rel="noopener noreferrer" class="social-list-instagram"
+                  href="https://www.instagram.com/xaumanforex/" aria-label="instagram follow button"><i
+                    class="fa fa-instagram"></i></a></li>
+              <li><a target="_blank" rel="noopener noreferrer" class="social-list-tiktok"
                   href="https://www.linkedin.com/sharing/share-offsite/?url=https://hessal-sol.com/"
-                  aria-label="linkedin share button"><i class="fa fa-linkedin"></i></a></li>
+                  aria-label="linkedin share button"><i class="fa fa-tiktok"></i></a></li>
+              <li><a target="_blank" rel="noopener noreferrer" class="social-list-telegram"
+                  href="https://www.linkedin.com/sharing/share-offsite/?url=https://hessal-sol.com/"
+                  aria-label="linkedin share button"><i class="fa fa-telegram"></i></a></li>
             </ul>
             <div class="display-3 my-4">Subscribe</div>
-            <div class="text-muted my-2">Sign up to be the first to know about our soft launch events</div>
+            <div class="text-muted">Sign up to be the first to know about our soft launch events</div>
           </div>
         </div>
       </div>
       <div class="row row-cols-lg-auto align-items-start justify-content-center bg-black" style="height:20vh">
-        <div class="col-12 my-2"><input type="email" class="form-control" id="exampleInputEmail1"
+        <div class="col-12"><input type="email" class="form-control" id="exampleInputEmail1"
             aria-describedby="emailHelp" style="background-color:#000" placeholder="E-mail"></div>
-        <div class="col-12 my-2 justify-content-md-start"><button type="button" class="btn btn-primary bg-dark">Sign
+        <div class="col-12 justify-content-md-start"><button type="button" class="btn btn-primary bg-dark">Sign
             Up</button></div>
       </div>
     </div>
