--- a/index.html
+++ b/index.html
@@ -29,20 +29,20 @@
     content="We are seasoned Gold Forex Traders helping individuals and institutions meet and surpass their financials goals">
   <meta property="og:url" content="https://xauman.com/index.html">
   <meta property="og:site_name" content="XAUman Forex">
-  <meta property="og:image" content="https://xauman.com/">
+  <meta property="og:image" content="https://xauman.com/src/img/Logo.webp">
   <meta property="og:image:width" content="1280">
   <meta property="og:image:height" content="720">
   <meta name="keywords"
-    content="LPG Design, LPG Installation, LPG Maintenance, LPG Appliances, LPG Safety, LPG Leak Detection, LPG Benefits, LPG Uses, LPG Production, LPG Fires, LPG Tanks, LPG Earthing">
-  <meta name="author" content="Hessal Solutions">
+    content="Financial Markets, Forex, Foreign Exchange Market, Gold Market, Commodities, Derivatives, Forex Trading, Contract For Difference, Gold Trading, Gold Traders ">
+  <meta name="author" content="XAUman Forex">
   <script type="application/ld+json">{
     "@context": "http://schema.org",
     "@type": "LocalBusiness",
-    "name": "Hessal Solutions",
-    "image": "https://hessal-sol.com/img/bg/Image-7.webp",
-    "url":"https://hessal-sol.com",
-    "telephone": "+254 (706) 547 003",
-    "email": "info@hessal-sol.com",
+    "name": "XAUman Forex",
+    "image": "https://xauman.com/src/img/Logo.webp",
+    "url":"https://xauman.com",
+    "telephone": "+254 (758) 810180",
+    "email": "info@xauman.com",
     "address": {
       "@type": "PostalAddress",
       "streetAddress": "Westlands",
