--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
   <title>XAUMAN | Coming Soon</title>
   <!--MetaData-->
   <meta name="description"
-    content=" We are seasoned Gold Forex Traders helping individuals and institutions meet and surpass their financials goals.">
+    content=" We are seasoned Gold Forex Traders helping individuals and institutions meet and surpass their financial goals.">
   <meta name="theme-color" content="#f89a4b">
   <link rel="canonical" href="https://xauman.com/index.html">
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="Website">
   <meta property="og:title" content="XAUman Forex">
   <meta property="og:description"
-    content="We are seasoned Gold Forex Traders helping individuals and institutions meet and surpass their financials goals">
+    content="We are seasoned Gold Forex Traders helping individuals and institutions meet and surpass their financial goals.">
   <meta property="og:url" content="https://xauman.com/index.html">
   <meta property="og:site_name" content="XAUman Forex">
   <meta property="og:image" content="https://xauman.com/src/img/Logo.webp">
@@ -71,8 +71,8 @@
   <main>
     <div class="container-fluid text-center">
       <div class="row justify-content-center align-items-center">
-        <div class="col bg-primary "
-          style="background:url(src/img/Trading.jpg) no-repeat center center fixed;-webkit-background-size:cover;-moz-background-size:cover;background-size:cover;-o-background-size:cover;height:85vh">
+        <div class="col bg-image"
+          style="background:url(src/img/Logo.webp) no-repeat center center fixed;-webkit-background-size:cover;-moz-background-size:cover;background-size:cover;-o-background-size:cover;height:100vh;">
           <div class="text-white text-center my-5">
             <h1 class="display-1 my-5">XAUman Forex</h1>
             <p class="display-4 ">Coming Soon</p>
