--- a/index.html
+++ b/index.html
@@ -71,22 +71,25 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-black">
       <div class="container">
         <a class="navbar-brand text-muted" href="#">XAUman</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+          aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#Follow">Follow us</a>
+              <a class="nav-link" href="#Follow">Follow</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#Subscribe">Subscribe</a>
             </li>
           </ul>
+          <span class="navbar-brand">
+            Coming soon!!
+          </span>
         </div>
       </div>
     </nav>
@@ -96,10 +99,6 @@
       <div class="row justify-content-center align-items-center">
         <div class="col"
           style="background:url(src/img/Logo.webp) no-repeat center center fixed;-webkit-background-size:cover;-moz-background-size:cover;background-size:cover;-o-background-size:cover;height:100vh;">
-          <div class="text-white text-center my-5">
-            <h1 class="display-1 my-5">XAUman Forex</h1>
-            <p class="display-4 ">Coming Soon</p>
-          </div>
         </div>
       </div>
       <div class="row bg-black text-white justify-content-center align-items-center" style="height:45vh">
