--- a/index.html
+++ b/index.html
@@ -51,11 +51,10 @@
     }
   }</script>
   <!-- Favicons -->
-  <link rel="shortcut icon" href="assets/img/Hessal-32.png">
-  <link rel="apple-touch-icon" href="assets/img/Hessal-60.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="assets/img/Hessal-76.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="assets/img/Hessal-120.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="assets/img/Hessal-152.png">
+  <link rel="shortcut icon" sizes="64x64" href="src/logos/XAU-64x64.webp">
+  <link rel="apple-touch-icon" sizes="32x32" href="src/logos/XAU-32x32.webp">
+  <link rel="apple-touch-icon" sizes="72x72" href="src/logos/XAU-72x72.webp">
+  <link rel="apple-touch-icon" sizes="114x114" href="src/logos/XAU-114x114.webp">
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="assets/css/style.css">
 
@@ -70,7 +69,8 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-black">
       <div class="container">
-        <a class="navbar-brand text-muted" href="#">XAUman</a>
+        <a class="navbar-brand text-muted" href="#"><img src="src/logos/XAU-32x32.webp" alt="Xauman Logo"
+            class="d-inline-block align-text-center mx-2">XAUman</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
           aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -150,8 +150,6 @@
   </footer>
   <!--Scripts-->
   <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
-  <script src="https://code.jquery.com/jquery-3.4.0.js"></script>
-  <script src="assets/js/core.js"></script>
 </body>
 
 </html>
