--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarText">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <ul class="navbar-nav justify-content-center me-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
@@ -98,40 +98,41 @@
     <div class="container-fluid text-center">
       <div class="row justify-content-center align-items-center">
         <div class="col"
-          style="background:url(src/img/Logo.webp) no-repeat center center fixed;-webkit-background-size:cover;-moz-background-size:cover;background-size:cover;-o-background-size:cover;height:100vh;">
+          style="background:url(src/img/Logo.webp) no-repeat center center fixed;-moz-background-size:cover;background-size:cover;-o-background-size:cover;height:100vh;">
         </div>
       </div>
       <div class="row bg-black text-white justify-content-center align-items-center" style="height:45vh">
-        <div class="row">
-          <div class="col-lg-12">
-            <div id="Follow" class="my-3">
-              <p class="social-title">Follow us on social media for updates</p>
-            </div>
-            <ul class="social-list">
-              <li><a target="_blank" rel="noopener noreferrer" class="social-list-facebook"
-                  href="https://www.facebook.com/profile.php?id=100089398025541" aria-label="facebook follow button"><i
-                    class="fa fa-facebook"></i></a></li>
-              <li><a target="_blank" rel="noopener noreferrer" class="social-list-twitter"
-                  href="https://twitter.com/XaumanForex" aria-label="twitter follow button"><i
-                    class="fa fa-twitter"></i></a></li>
-              <li><a target="_blank" rel="noopener noreferrer" class="social-list-instagram"
-                  href="https://www.instagram.com/xaumanforex/" aria-label="instagram follow button"><i
-                    class="fa fa-instagram"></i></a></li>
-              <li><a target="_blank" rel="noopener noreferrer" href="https://www.tiktok.com/@xaumanforex_xmf"
-                  aria-label="tiktok follow button"><i class="bi bi-tiktok"></i>
-                </a></li>
-              <li><a target="_blank" rel="noopener noreferrer" class="social-list-telegram"
-                  href="https://t.me/+6juAbHJs9wI4ZmI0" aria-label="telegram follow button"><i
-                    class="fa fa-telegram"></i></a></li>
-            </ul>
-            <div id="Subscribe" class="display-5 my-4">Subscribe</div>
-            <div class="text-muted">Sign up to be the first to know about our soft launch events</div>
+        <div class="col-lg-12">
+          <div id="Follow" class="my-3">
+            <p class="h2 social-title">Follow us on social media for updates</p>
           </div>
+          <ul class="social-list">
+            <li><a target="_blank" rel="noopener noreferrer" class="social-list-facebook"
+                href="https://www.facebook.com/profile.php?id=100089398025541" aria-label="facebook follow button"><i
+                  class="fa fa-facebook"></i></a></li>
+            <li><a target="_blank" rel="noopener noreferrer" class="social-list-twitter"
+                href="https://twitter.com/XaumanForex" aria-label="twitter follow button"><i
+                  class="fa fa-twitter"></i></a></li>
+            <li><a target="_blank" rel="noopener noreferrer" class="social-list-instagram"
+                href="https://www.instagram.com/xaumanforex/" aria-label="instagram follow button"><i
+                  class="fa fa-instagram"></i></a></li>
+            <li><a target="_blank" rel="noopener noreferrer" href="https://www.tiktok.com/@xaumanforex_xmf"
+                aria-label="tiktok follow button"><i class="bi bi-tiktok"></i>
+              </a></li>
+            <li><a target="_blank" rel="noopener noreferrer" class="social-list-telegram"
+                href="https://t.me/+6juAbHJs9wI4ZmI0" aria-label="telegram follow button"><i
+                  class="fa fa-telegram"></i></a></li>
+          </ul>
+          <div id="Subscribe" class="display-5 my-4">Subscribe</div>
         </div>
+        <div class="justify-content-center text-muted my-2">Sign up to be the first to know about
+          our soft launch events</div>
       </div>
       <div class="row row-cols-lg-auto align-items-start justify-content-center bg-black" style="height:20vh">
-        <div class="col-12"><input type="email" class="form-control" id="exampleInputEmail1"
-            aria-describedby="emailHelp" style="background-color:#000" placeholder="E-mail"></div>
+        <div class="col-12">
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+            style="background-color:#000" placeholder="E-mail">
+        </div>
         <div class="col-12 justify-content-md-start"><button type="button" class="btn btn-primary bg-dark">Sign
             Up</button></div>
       </div>
@@ -140,14 +141,16 @@
   <footer class="footer mt-auto py-3 bg-black">
     <div class="container-fluid text-center">
       <div class="row bg-black text-muted">
-        <div class="col-md-6 mb-2">&copy <strong>XAU</strong>man Forex 2023 - All Rights Reserved.</div>
-        <div class="col-md-6 mb-2">Designed by <strong class="text-white">Blasio</strong></div>
+        <div class="col-md-6 mb-2 col-lg-6 col-sm-12">&copy <strong>XAU</strong>man Forex 2023 - All Rights Reserved.
+        </div>
+        <div class="col-md-6 mb-2 col-lg-6 col-sm-12">Designed by <strong class="text-white">Blasio</strong></div>
       </div>
       <div class="row bg-black text-muted text-center">
         <p class="footer-priv mb-2"><a href="#">Privacy Policy</a></p>
       </div>
     </div>
   </footer>
+
   <!--Scripts-->
   <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
