--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-black">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-black background-bg shadow" id="nav-bg">
       <div class="container">
         <a class="navbar-brand text-muted" href="#"><img src="src/logos/XAU-32x32.webp" alt="Xauman Logo"
             class="d-inline-block align-text-center mx-2">XAUman</a>
@@ -97,8 +97,7 @@
   <main>
     <div class="container-fluid text-center">
       <div class="row justify-content-center align-items-center">
-        <div class="col"
-          style="background:url(src/img/Logo.webp) no-repeat center center fixed;-moz-background-size:cover;background-size:cover;-o-background-size:cover;height:100vh;">
+        <div class="col background-bg" id="main-bg">
         </div>
       </div>
       <div class="row bg-black text-white justify-content-center align-items-center" style="height:45vh">
@@ -123,8 +122,8 @@
                 href="https://t.me/+6juAbHJs9wI4ZmI0" aria-label="telegram follow button"><i
                   class="fa fa-telegram"></i></a></li>
           </ul>
-          <div id="Subscribe" class="display-5 my-4">Subscribe</div>
         </div>
+        <div id="Subscribe" class="display-5 my-4">Subscribe</div>
         <div class="justify-content-center text-muted my-2">Sign up to be the first to know about
           our soft launch events</div>
       </div>
