Navbar mask added

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-black background-bg shadow" id="nav-bg">
+      <div class="position-absolute top-0 start-0 w-100 h-100 bg-black opacity-50" style="pointer-events: none;"></div>
       <div class="container">
         <a class="navbar-brand text-muted" href="#"><img src="src/logos/XAU-32x32.webp" alt="Xauman Logo"
             class="d-inline-block align-text-center mx-2">XAUman</a>
@@ -152,6 +153,8 @@
 
   <!--Scripts-->
   <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="assets/js/core.js"></script>
 </body>
 
 </html>
