--- a/test.html
+++ b/test.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg navbar-dark shadow-5-strong" id="nav-bg">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-5-strong" id="nav-bg">
             <!-- Container wrapper -->
             <div class="container-fluid ">
                 <!-- Navbar brand -->
@@ -22,8 +22,13 @@
                 <!-- Toggle button -->
                 <button class="navbar-toggler" type="button" data-mdb-toggle="collapse"
                     data-mdb-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="fas fa-bars"></i>
+                    aria-expanded="false">
+                    <i class="fa fa-bars"></i>
+                </button>
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasExample" aria-controls="offcanvasExample" aria-label="Toggle navigation">
+                    <i class="fa fa-bars"></i>
                 </button>
 
                 <!-- Collapsible wrapper -->
@@ -72,10 +77,35 @@
     </header>
 
     <main>
-        <div class="container-fluid text-center">
-            <div class="row justify-content-center align-items-center">
-                <div class="col"
-                    style="background:url(src/img/Logo.webp) no-repeat center center fixed;-moz-background-size:cover;background-size:cover;-o-background-size:cover;height:100vh;">
+        <a class="btn btn-primary" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button"
+            aria-controls="offcanvasExample">
+            Link with href
+        </a>
+        <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample"
+            aria-controls="offcanvasExample">
+            Button with data-bs-target
+        </button>
+
+        <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample"
+            aria-labelledby="offcanvasExampleLabel">
+            <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="offcanvasExampleLabel">Offcanvas</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+                <div>
+                    Some text as placeholder. In real life you can have the elements you have chosen. Like, text,
+                    images, lists, etc.
+                </div>
+                <div class="dropdown mt-3">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">
+                        Dropdown button
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">Action</a></li>
+                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
