--- a/index.html
+++ b/index.html
@@ -74,11 +74,10 @@
       <div class="container">
         <a class="navbar-brand text-muted"><img src="src/logos/XAU-32x32.webp" alt="Xauman Logo"
             class="d-inline-block align-text-center mx-2">XAUman</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample"
+        <button class="navbar-toggler " type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample"
           aria-controls="offcanvasExample" aria-label="Toggle navigation">
           <i class="fa fa-bars"></i>
         </button>
-
         <!--Desktop Navigation-->
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav justify-content-center me-auto mb-2 mb-lg-0">
@@ -158,8 +157,8 @@
           </ul>
         </div>
         <div id="Subscribe" class="display-5 my-4">Subscribe</div>
-        <div class="justify-content-center text-muted my-2">Sign up to be the first to know about
-          our soft launch events</div>
+        <div class="justify-content-center text-muted my-2">Sign up and get the latest updates on our launch.
+        </div>
       </div>
       <div class="row row-cols-lg-auto align-items-start justify-content-center bg-black" style="height:20vh">
         <div class="col-12">
@@ -168,6 +167,9 @@
         </div>
         <div class="col-12 justify-content-md-start"><button type="button" class="btn btn-primary bg-dark">Sign
             Up</button></div>
+        <div class="justify-content-center text-muted my-2">Connect with us on our social media or reach-out to us on
+          <strong class="text-white">info@xauman.com</strong>
+        </div>
       </div>
     </div>
   </main>
