Navigation button modified

--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
       <div class="container">
         <a class="navbar-brand text-muted"><img src="src/logos/XAU-32x32.webp" alt="Xauman Logo"
             class="d-inline-block align-text-center mx-2">XAUman</a>
-        <button class="navbar-toggler " type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample"
+        <!-- <button class="navbar-toggler " type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample"
           aria-controls="offcanvasExample" aria-label="Toggle navigation">
           <i class="fa fa-bars"></i>
-        </button>
+        </button> -->
         <!--Desktop Navigation-->
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav justify-content-center me-auto mb-2 mb-lg-0">
