--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
       <div class="container">
         <a class="navbar-brand text-muted"><img src="src/logos/XAU-32x32.webp" alt="Xauman Logo"
             class="d-inline-block align-text-center mx-2">XAUman</a>
-        <!-- <button class="navbar-toggler " type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample"
+        <button class="navbar-toggler " type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample"
           aria-controls="offcanvasExample" aria-label="Toggle navigation">
           <i class="fa fa-bars"></i>
-        </button> -->
+        </button>
         <!--Desktop Navigation-->
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav justify-content-center me-auto mb-2 mb-lg-0">
@@ -114,10 +114,30 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#Follow">Follow</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#Subscribe">Subscribe</a>
+            <div class="dropdown">
+              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                Share on Social Media
+              </button>
+
+              <ul class="dropdown-menu social-list vertical" aria-labelledby="dropdownMenuButton1">
+                <li><a target="_blank" rel="noopener noreferrer" class="social-list-facebook dropdown-item"
+                    href="https://www.facebook.com/profile.php?id=100089398025541"
+                    aria-label="facebook follow button"><i class="fa fa-facebook"></i></a></li>
+                <li><a target="_blank" rel="noopener noreferrer" class="social-list-twitter dropdown-item"
+                    href="https://twitter.com/XaumanForex" aria-label="twitter follow button"><i
+                      class="fa fa-twitter"></i></a></li>
+                <li><a target="_blank" rel="noopener noreferrer" class="social-list-instagram dropdown-item"
+                    href="https://www.instagram.com/xaumanforex/" aria-label="instagram follow button"><i
+                      class="fa fa-instagram"></i></a></li>
+                <li><a target="_blank" rel="noopener noreferrer" href="https://www.tiktok.com/@xaumanforex_xmf"
+                    class="dropdown-item" aria-label="tiktok follow button"><i class="bi bi-tiktok"></i>
+                  </a></li>
+                <li><a target="_blank" rel="noopener noreferrer" class="social-list-telegram dropdown-item"
+                    href="https://t.me/+6juAbHJs9wI4ZmI0" aria-label="telegram follow button"><i
+                      class="fa fa-telegram"></i></a></li>
+              </ul>
+            </div>
           </li>
         </ul>
         <span class="navbar-brand">
