Social media share buttons added

--- a/index.html
+++ b/index.html
@@ -123,19 +123,20 @@
               <ul class="dropdown-menu social-list vertical" aria-labelledby="dropdownMenuButton1">
                 <li><a target="_blank" rel="noopener noreferrer" class="social-list-facebook dropdown-item"
                     href="https://www.facebook.com/profile.php?id=100089398025541"
-                    aria-label="facebook follow button"><i class="fa fa-facebook"></i></a></li>
+                    aria-label="facebook follow button"><i class="fa fa-facebook align-middle"></i>Facebook</a></li>
                 <li><a target="_blank" rel="noopener noreferrer" class="social-list-twitter dropdown-item"
                     href="https://twitter.com/XaumanForex" aria-label="twitter follow button"><i
-                      class="fa fa-twitter"></i></a></li>
+                      class="fa fa-twitter align-middle"></i>Twitter</a></li>
                 <li><a target="_blank" rel="noopener noreferrer" class="social-list-instagram dropdown-item"
                     href="https://www.instagram.com/xaumanforex/" aria-label="instagram follow button"><i
-                      class="fa fa-instagram"></i></a></li>
+                      class="fa fa-instagram align-middle"></i>Instagram</a></li>
                 <li><a target="_blank" rel="noopener noreferrer" href="https://www.tiktok.com/@xaumanforex_xmf"
-                    class="dropdown-item" aria-label="tiktok follow button"><i class="bi bi-tiktok"></i>
+                    class="dropdown-item" aria-label="tiktok follow button"><i
+                      class="bi bi-tiktok align-middle"></i>Tiktok
                   </a></li>
                 <li><a target="_blank" rel="noopener noreferrer" class="social-list-telegram dropdown-item"
                     href="https://t.me/+6juAbHJs9wI4ZmI0" aria-label="telegram follow button"><i
-                      class="fa fa-telegram"></i></a></li>
+                      class="fa fa-telegram align-middle"></i>Telegram</a></li>
               </ul>
             </div>
           </li>
