--- a/index.html
+++ b/index.html
@@ -114,27 +114,26 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <div class="dropdown">
-              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
-                data-bs-toggle="dropdown" aria-expanded="false">
-                Share on Social Media
-              </button>
-
-              <ul class="dropdown-menu social-list vertical" aria-labelledby="dropdownMenuButton1">
-                <li><a target="_blank" rel="noopener noreferrer" class="social-list-facebook dropdown-item"
-                    href="https://www.facebook.com/profile.php?id=100089398025541"
+            <button class="btn btn-secondary bg-dark" type="button" data-bs-toggle="collapse"
+              data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+              Share on Social Media
+            </button>
+            <div class="collapse bg-black" id="collapseExample">
+              <ul class="social-list vertical">
+                <li class="border-bottom border-secondary mx-3 my-2"><a target="_blank" rel="noopener noreferrer"
+                    class="social-list-facebook " href="https://www.facebook.com/profile.php?id=100089398025541"
                     aria-label="facebook follow button"><i class="fa fa-facebook align-middle"></i>Facebook</a></li>
-                <li><a target="_blank" rel="noopener noreferrer" class="social-list-twitter dropdown-item"
-                    href="https://twitter.com/XaumanForex" aria-label="twitter follow button"><i
-                      class="fa fa-twitter align-middle"></i>Twitter</a></li>
-                <li><a target="_blank" rel="noopener noreferrer" class="social-list-instagram dropdown-item"
-                    href="https://www.instagram.com/xaumanforex/" aria-label="instagram follow button"><i
-                      class="fa fa-instagram align-middle"></i>Instagram</a></li>
-                <li><a target="_blank" rel="noopener noreferrer" href="https://www.tiktok.com/@xaumanforex_xmf"
-                    class="dropdown-item" aria-label="tiktok follow button"><i
-                      class="bi bi-tiktok align-middle"></i>Tiktok
+                <li class="border-bottom border-secondary mx-3 my-2"><a target="_blank" rel="noopener noreferrer"
+                    class="social-list-twitter " href="https://twitter.com/XaumanForex"
+                    aria-label="twitter follow button"><i class="fa fa-twitter align-middle"></i>Twitter</a></li>
+                <li class="border-bottom border-secondary mx-3 my-2"><a target="_blank" rel="noopener noreferrer"
+                    class="social-list-instagram " href="https://www.instagram.com/xaumanforex/"
+                    aria-label="instagram follow button"><i class="fa fa-instagram align-middle"></i>Instagram</a></li>
+                <li class="border-bottom border-secondary mx-3 my-2"><a target="_blank" rel="noopener noreferrer"
+                    href="https://www.tiktok.com/@xaumanforex_xmf" class="dropdown-item"
+                    aria-label="tiktok follow button"><i class="bi bi-tiktok align-middle"></i>Tiktok
                   </a></li>
-                <li><a target="_blank" rel="noopener noreferrer" class="social-list-telegram dropdown-item"
+                <li class="mx-3 my-2"><a target="_blank" rel="noopener noreferrer" class="social-list-telegram "
                     href="https://t.me/+6juAbHJs9wI4ZmI0" aria-label="telegram follow button"><i
                       class="fa fa-telegram align-middle"></i>Telegram</a></li>
               </ul>
@@ -181,16 +180,18 @@
         <div class="justify-content-center text-muted my-2">Sign up and get the latest updates on our launch.
         </div>
       </div>
-      <div class="row row-cols-lg-auto align-items-start justify-content-center bg-black" style="height:20vh">
+      <div class="row row-cols-lg-auto align-items-start justify-content-center bg-black" style="height:15vh">
         <div class="col-12">
           <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
             style="background-color:#000" placeholder="E-mail">
         </div>
         <div class="col-12 justify-content-md-start"><button type="button" class="btn btn-primary bg-dark">Sign
             Up</button></div>
-        <div class="justify-content-center text-muted my-2">Connect with us on our social media or reach-out to us on
-          <strong class="text-white">info@xauman.com</strong>
-        </div>
+      </div>
+      <div class="row justify-content-center text-white bg-black">Connect with us on our social media or reach-out
+        to us
+        on
+        <strong class="text-white">info@xauman.com</strong>
       </div>
     </div>
   </main>
