Updated offcanvas social media icons styling

--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
                 <li class="border-bottom border-secondary mx-3 my-2"><a target="_blank" rel="noopener noreferrer"
                     class="social-list-instagram " href="https://www.instagram.com/xaumanforex/"
                     aria-label="instagram follow button"><i class="fa fa-instagram align-middle"></i>Instagram</a></li>
-                <li class="border-bottom border-secondary mx-3 my-2"><a target="_blank" rel="noopener noreferrer"
-                    href="https://www.tiktok.com/@xaumanforex_xmf" class="dropdown-item"
+                <li class="border-bottom border-secondary mx-3 my-2 social-list-tiktok"><a target="_blank"
+                    rel="noopener noreferrer" href="https://www.tiktok.com/@xaumanforex_xmf" class="dropdown-item"
                     aria-label="tiktok follow button"><i class="bi bi-tiktok align-middle"></i>Tiktok
                   </a></li>
                 <li class="mx-3 my-2"><a target="_blank" rel="noopener noreferrer" class="social-list-telegram "
